# skillscan-lint

./: .gitignore  .skillscan-lint.toml.example  .vale.ini  CHANGELOG.md  DOCKER_HUB_DESCRIPTION.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release-docker.yml  release-pypi.yml
src/skillscan_lint/: __init__.py  cli.py  config.py  linter.py  models.py  parser.py  skill_schema.py
src/skillscan_lint/data/: skill-schema.yaml
src/skillscan_lint/detectors/: graph.py
src/skillscan_lint/formatters/: output.py
src/skillscan_lint/rules/: base.py  quality.py
tests/: test_badge.py  test_config.py  test_rules.py  test_sarif.py
tests/fixtures/fail/: missing_fields.md  short_description.md  weasel_skill.md
tests/fixtures/pass/: good_skill.md
vale/: README.md
vale/styles/SkillScan/: Buzzwords.yml  DoubleNegatives.yml  Nominalisations.yml  PassiveVoice.yml  RedundantPhrases.yml  Superlatives.yml  VagueActions.yml  WeaselFillers.yml  WeaselHedges.yml  WeaselIntensifiers.yml
